spacing fixed on about page

--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 .about-container {
-    display: inline-block;
+    /* display: inline-block; */
     width: 100%;
     height: 765px;
     position: relative;
@@ -7,19 +7,19 @@
 }
 
 .box {
-    display: inline;
+    /* display: inline; */
+    float: left;
+    width: 47%;
 }
 
-.video {
-    float: left;
-}
+
 .audio {
     /* align-items: center; */
     margin-left: 230px;
     padding: 10px;
-    float: right;
-
+    float: left;
 }
+
 .text {
     text-align: center;
     color: purple;
